# python-firered

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  game.py  pyproject.toml
src/: intro.py  main.py  palette.py  tile.py
