[tool.poetry]
name = "Python-Firered"
version = "0.1"
description = "A PoC."
authors = [
    "Rodrigo Azevedo",
]

[tool.poetry.dependencies]
python = "~=3.10"
pygame = "~=2.5"
numpy = "^1.26.4"


[tool.poetry.dev-dependencies]
isort = "~=5.13"
black = "~=23.12"
pylint = "~=3.0"
pytest = "~=7.4"

[build-system]
requires = ["poetry_core==1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["venv", "tests"]
skips = []